--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
                 <div class="rightnav">
                     <ul class="flex">
                         <li><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Services</a></li>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">Pages</a></li>
-                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#services">Services</a></li>
+                        <li><a href="#blogs">Blog</a></li>
+                        <li><a href="#features">Features</a></li>
+                        <li><a href="#team">Team</a></li>
                         <li><a href="#">Get Started</a></li>
                     </ul>
                 </div>
@@ -80,17 +80,17 @@
 
                     <div class="follow-icons flex uniwidth">
                         <span>Follow Us:</span>
-                        <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                        <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                        <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                        <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                        <a href="https://www.facebook.com"><i class="fa-brands fa-facebook-f"></i></a>
+                        <a href="https://www.instagram.com"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://www.twitter.com"><i class="fa-brands fa-twitter"></i></a>
+                        <a href="https://www.linkedin.com"><i class="fa-brands fa-linkedin-in"></i></a>
                     </div>
                 </div>
             </div>
         </section>
     </header>
 
-    <div class="uniwidth">
+    <div class="uniwidth" id="about">
         <div class="about-us uniwidth  main-max-width flex">
             <div class="about-content" data-aos="fade-right" data-aos-duration="2000">
                 <h3 class="main-h3">About Us</h3>
@@ -139,7 +139,7 @@
     </div>
 
 
-    <div class="uniwidth">
+    <div class="uniwidth" id="services">
         <div class="our-service main-max-width">
             <h3 class="main-h3">Our Serivces</h3>
             <h2 class="main-h2">We Services provided best offer</h2>
@@ -240,7 +240,7 @@
 
 
 
-    <div class="uniwidth">
+    <div class="uniwidth" id="features">
         <div class="our-features main-max-width" data-aos="fade-up" data-aos-duration="2000">
             <h3 class="main-h3">Our Features</h3>
             <h2 class="main-h2">
@@ -326,7 +326,7 @@
 
     <!-- ============= Our Blogs ============== -->
 
-    <div class="uniwidth">
+    <div class="uniwidth" id="blogs">
         <div class="our-blogs main-max-width" data-aos="fade-up" data-aos-duration="2000">
             <h3 class="main-h3">Our Blog & News</h3>
             <h2 class="main-h2">Articles For Pro Traders</h2>
@@ -488,7 +488,7 @@
 
     <!-- =======  Our Team =========== -->
 
-    <div class="uniwidth">
+    <div class="uniwidth" id="team">
         <div class="main-max-width our-team" data-aos="fade-up" data-aos-duration="2000">
             <h3 class="main-h3">Our Team</h3>
             <h2 class="main-h2">Meet Our Advisers</h2>
